Apply IDE inspection fixes